--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "data-uri-to-blob",
   "description": "Get a Blob from a data uri",
   "version": "0.0.5",
-  "keywords": ["blob", "uri"],
+  "keywords": [
+    "blob",
+    "uri"
+  ],
   "development": {},
   "license": "MIT",
   "component": {
     "scripts": {
       "data-uri-to-blob/index.js": "index.js"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/component/data-uri-to-blob.git"
   }
 }
